syntax = "proto3";
package rollapp.hub_genesis;

import "gogoproto/gogo.proto";

option go_package = "github.com/dymensionxyz/dymension-rdk/x/hub-genesis/types";

// State holds the state of the genesis event
message State {
  reserved 1 to 5;

  // are outboundTransfersEnabled? This is only true if the genesis protocol has
  // finished
  bool outbound_transfers_enabled = 6;
  // the canonical transfer port and channel for the hub
  PortAndChannel hub_port_and_channel = 7;
  // accounts on the Hub to fund with some bootstrapping transfers
  repeated GenesisAccount genesis_accounts = 8 [ (gogoproto.nullable) = false ];
}

message PortAndChannel {
  // port
  string port = 1;
  // channel
  string channel = 2;
}

// GenesisAccount is a struct for the genesis account for the rollapp
message GenesisAccount {
  // amount of coins to be sent to the genesis address
  string amount = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  // address is a bech-32 address of the genesis account
  string address = 2;
}